# serial_cmake

./: CMakeLists.txt
cmake/: serialConfig.cmake.in
